--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -12,12 +12,15 @@ source:
     sha256: {{ sha256 }}
 
 build:
-  number: 0
-  script: python setup.py install --single-version-externally-managed --record=record.txt
+  number: 1
+  script: pip install --no-deps .
+  entry_points:
+    - jupyter-contrib = jupyter_contrib_core.application:main
 
 requirements:
   build:
     - python
+    - pip
     - setuptools
   run:
     - python
