--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,30 +1,28 @@
 {% set name = "jupyter_contrib_core" %}
 {% set version = "0.4.0" %}
-{% set sha256 = "ad995f5754188ab41ea5f94d69c9a1f96ba50543274d798d9001f937f730d326" %}
 
 package:
-  name: {{ name }}
+  name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  fn: {{ name }}-{{ version }}.tar.gz
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
-  sha256: {{ sha256 }}
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/jupyter_contrib_core-{{ version }}.tar.gz
+  sha256: ad995f5754188ab41ea5f94d69c9a1f96ba50543274d798d9001f937f730d326
 
 build:
   noarch: python
-  number: 0
-  script: {{ PYTHON }} -m pip install . --no-deps -vv
   entry_points:
     - jupyter-contrib = jupyter_contrib_core.application:main
+  script: {{ PYTHON }} -m pip install . -vv
+  number: 0
 
 requirements:
   host:
-    - python
+    - python >=3.6
     - pip
     - setuptools
   run:
-    - python
+    - python >=3.6
     - setuptools
     - jupyter_core
     - notebook >=4.0
@@ -42,15 +40,22 @@ test:
     - jupyter_contrib_core.notebook_compat._compat.nbextensions
     - jupyter_contrib_core.notebook_compat._compat.serverextensions
 
+test:
+  imports:
+    - jupyter_contrib_core
   commands:
-    - jupyter contrib --help
+    - pip check
+    - jupyter-contrib --help
+  requires:
+    - pip
 
 about:
   summary: Common utilities for jupyter-contrib projects.
   home: https://github.com/jupyter-contrib/jupyter_contrib_core
   license_file: LICENSE.txt
-  license: BSD 3-clause
+  license: BSD-3-Clause
 
 extra:
   recipe-maintainers:
     - jcb91
+    - ocefpaf
